tests/snapshots/compiler__it_should_compile_parsed_content.snap
---
source: tests/compiler.rs
expression: html_content
---
<h1 class="text-red">Vite CJS Faker Demo</h1><div class="card"><div class="card__image"><img :src="natureImageUrl" :alt="'Background image for ' + fullName" /></div><div class="card__profile"><img :src="avatarUrl" :alt="'Avatar image of ' + fullName" /></div><div class="card__body">{{ fullName }}</div></div>
