tests/snapshots/compiler__it_should_pretty_print_defer.snap
---
source: tests/compiler.rs
expression: "compile_pretty(\"@defer (on viewport)\\n  p A\\n@placeholder\\n  p B\\n\")"
---
@defer (on viewport) {
  <p>A</p>
} @placeholder {
  <p>B</p>
}
