tests/snapshots/compiler__it_should_pretty_print_for_empty.snap
---
source: tests/compiler.rs
expression: "compile_pretty(\"@for (x of xs; track x)\\n  p A\\n@empty\\n  p B\\n\")"
---
@for (x of xs; track x) {
  <p>A</p>
} @empty {
  <p>B</p>
}
