tests/snapshots/compiler__it_should_pretty_print_switch.snap
---
source: tests/compiler.rs
expression: html
---
@switch (s) {
  @case (a) {
    <p>A</p>
  }
  @default {
    <p>D</p>
  }
}
