tests/snapshots/compiler__it_should_pretty_print_switch_with_default_never.snap
---
source: tests/compiler.rs
expression: "compile_pretty(\"@switch (s)\\n  @case (a)\\n    p A\\n  @default never(s);\\n\")"
---
@switch (s) {
  @case (a) {
    <p>A</p>
  }
  @default never(s);
}
